--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             </div>
             <div class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-palette-5-light-1 u-size-20">
               <div class="u-container-layout u-valign-middle u-container-layout-2">
-                <h2 class="u-align-center u-text u-text-body-alt-color u-text-default u-text-1">welcome</h2>
+                <h2 class="u-align-center u-text u-text-body-alt-color u-text-default u-text-1">Clean Slate</h2>
                 <div class="u-border-4 u-border-white u-line u-line-vertical u-line-1"></div>
-                <h6 class="u-align-center u-text u-text-body-alt-color u-text-2">interior salon</h6>
+                <h6 class="u-align-center u-text u-text-body-alt-color u-text-2">Decor & Design</h6>
                 <p class="u-align-center u-text u-text-body-alt-color u-text-3">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
                 <a href="#" class="u-active-none u-border-4 u-border-white u-btn u-btn-rectangle u-button-style u-hover-none u-none u-btn-1">read more</a>
               </div>
@@ -88,14 +88,11 @@
     
     
     <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="#" target="_blank">
-        <span>Template</span>
-      </a>
       <p class="u-text">
-        <span>created with</span>
+        <span>Contact Us At Our</span>
       </p>
       <a class="u-link" href="#" target="_blank">
-        <span>Nicepage</span>
+        <span>Contact Page</span>
       </a>. 
     </section>
   </body>
