--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <div class="u-container-layout u-valign-middle u-container-layout-2">
                 <h2 class="u-align-center u-text u-text-body-alt-color u-text-default u-text-1">Clean Slate</h2>
                 <div class="u-border-4 u-border-white u-line u-line-vertical u-line-1"></div>
-		<p style="font-family:verdana">Resale Decor & Design</p>
+		<p class="handwritten">Resale Decor & Design<p>
                 <h6 class="u-align-center u-text u-text-body-alt-color u-text-2">Resale Decor & Design</h6>
                 <p class="u-align-center u-text u-text-body-alt-color u-text-3">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
                 <a href="#" class="u-active-none u-border-4 u-border-white u-btn u-btn-rectangle u-button-style u-hover-none u-none u-btn-1">read more</a>
